# coding

./: LICENSE  README.md
coding/: README.md
coding/arduino/DisplayRunningText/: running_message.ino
coding/arduino/PseudoRandomDice/: DiceFromDungeonsAndDragons.ino
coding/arduino/Stopwatches/: stopwatch.ino
coding/bash/BarPlot/: barplot.sh  task.md
coding/bash/DirList/: dir.sh  task.md
coding/bash/PicOrganize/: organize_photos.sh  task.md
coding/c#/01-Physics/: Physics.sln
coding/c#/02-FluentPanels/: FluentPanels.sln
coding/c#/03-ImmutablePeople/: ImmutablePeople.reference-output.txt
coding/c#/05-Validators/: Validators.reference-output.cs-CZ.txt  Validators.sln
coding/c#/BigIntDivision/: Devision.cs  Program.cs  Reader.cs
coding/c#/DayDifference/: DayDifference.cs  Program.cs  Reader.cs
coding/c#/RobotsCoord3D/: CoordinateSpace.cs  Program.cs  Reader.cs
coding/c#/TwoBeasts/: Labyrinth.cs  Program.cs  Reader.cs  input_beast
coding/c#/WaterTransfer/: History.cs  Model.cs  Program.cs  Reader.cs  Situation.cs
coding/java/BrainFuck/: pom.xml
coding/python/PackageProjectName/project-name/: LICENSE  PKG-INFO  README.md  setup.cfg
coding/python/PackageProjectName/project-name/src/project_name.egg-info/: SOURCES.txt  entry_points.txt
projects/: README.md
projects/3-TierArchitectureDatabases/: danek_matpra.docx
projects/BTCWallet/: DevelopDocs.odt  MIT  README.md  UserDocs.odt  schema.sql  specifikace.md
projects/BombermanUnity/: MIT  README.md
projects/TicTacToe/: main.py
projects/cms/: .htaccess  db_config.php  index.php
(+174 files in other folders)
