[metadata]
name = project-name
version = 0.0.1
author = Jiri Danek
author_email = jirkadanek@icloud.com
description = Prints the name of given project or directory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.mff.cuni.cz/teaching/nswi177/2023/student-danekji1/-/tree/master/11/
keywords = git projectname direcotry
classifiers = 
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires = 
	GitPython ~= 3.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	project-name = projectname.main:main

[egg_info]
tag_build = 
tag_date = 0

